apps/homelab-web/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-web
  namespace: homelab-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/homelab-web:sha-04aea0869d105ee2332bf7e2ceb668ac4251c675
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
