apps/homelab-web/envs/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-web
  namespace: homelab-web
spec:
  rules:
    - host: portal.homelab.local
